--- a/index.html
+++ b/index.html
@@ -152,10 +152,14 @@
       </div>      
       <div id="section42" class="bg-warning">         
         <h2>Donate</h2>
-        <p>YSCC makes it possiblel to give via these methods. Remember all gifts are tax-deductible. </p>
-        <i class="fab fa-cc-paypal" style="font-size:24px"></i>
-        <i class="fab fa-cc-apple-pay" style="font-size:24px"></i>
-        <i class="fab fa-cc-apple-pay" style="font-size:24px"></i>
+        <p>Click below to make a contriubtion to help continue the work of YSCC. Remember all gifts are tax-deductible. </p>
+        
+        <form action="https://www.paypal.com/donate" method="post" target="_top">
+          <input type="hidden" name="hosted_button_id" value="AXLVLNQYJ42JE" />
+          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+          <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+          </form>
+          
 
       </div>
     </div>
