--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </ul>
     </nav>
     <div class="col-sm-9 col-8">
-      <h5>YSCC is the intersection where spirituality and diversity collides.</h5>
+      <h4 id="headline">"YSCC is the intersection where spirituality and diversity collides."</h4>
       <div id="section1" class="bg-warning">    
         <h2>About YSCC</h2>
         <p>In 2016, a group of people decided to sit down and talk about why the traditional church was no longer a priority in their lives.  While we entered the space with zero expectations, we experienced safety, divinity, peace, healing and healthy community while celebrating our similarities and differences alike.  It was so good and refreshing that we decided to do it again and again.  
