added initial event card code

--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
       <div id="section3" class="bg-warning">         
         <h2>Events</h2>
         <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+        <div class="col-md-auto mb-5">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="./assets/YSCC+logo.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Coming Soon</h5>
+              <p class="card-text">Event details coming soon!</p>
+              <a href="" class="btn btn-info">Get Tickets</a>
+            </div>
+          </div>
+        </div>
       </div></br>
       <div id="section41" class="bg-warning">         
         <h2>Get In Touch</h2>
