--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
       <div id="section3" class="bg-warning">         
         <h2>Events</h2>
         <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+      <div class="row d-flex" >
         <div class="col-md-auto mb-5">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 13rem;">
             <img class="card-img-top" src="./assets/YSCC+logo.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Coming Soon</h5>
@@ -151,6 +152,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div></br>
       <div id="section41" class="bg-warning">         
         <h2>Get In Touch</h2>
