--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
       </ul>
     </nav>
     <div class="col-sm-9 col-8">
-      <h4 id="headline">"YSCC is the intersection where spirituality and diversity collides."</h4>
+    
       <div id="section1" class="bg-warning">    
-        <h2>About YSCC</h2>
+        <h4 class="justify-content-center">"YSCC is the intersection where spirituality and diversity collides."</h4>
         <p>In 2016, a group of people decided to sit down and talk about why the traditional church was no longer a priority in their lives.  While we entered the space with zero expectations, we experienced safety, divinity, peace, healing and healthy community while celebrating our similarities and differences alike.  It was so good and refreshing that we decided to do it again and again.  
 
           Our sincere intentions eventually because YSCC, a 501c3 non-profit organization in 2018 that continues to create spaces that allow people to experience healing, wholeness, equity, purpose and inclusion.  What we do may seem untraditional and unorthodox to some, yet we continue to witness community happen with strangers who realize they are more alike than different, people are heard and seen, unconscious biases are confronted, and ultimately purpose is aligned.  That’s not just what we do, but it is who we are.
