--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <p>Click below to make a contriubtion to help continue the work of YSCC. Remember all gifts are tax-deductible. </p>
         
         <form action="https://www.paypal.com/donate" method="post" target="_top">
-          <input type="hidden" name="hosted_button_id" value="7HEQ9A4N2F8JJ" />
+          <input type="hidden" name="hosted_button_id" value="TW6JNJT8QFGFE" />
           <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
           <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
           </form>
