--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </nav>
     <div class="col-sm-9 col-8">
     
-      <div id="section1" class="bg-warning">    
+      <div id="section1" class="bg-info">    
         <h4 class="container d-inline-flex justify-content-center">"YSCC is the intersection where spirituality and diversity collides."</h4>
         <p>In 2016, a group of people decided to sit down and talk about why the traditional church was no longer a priority in their lives.  While we entered the space with zero expectations, we experienced safety, divinity, peace, healing and healthy community while celebrating our similarities and differences alike.  It was so good and refreshing that we decided to do it again and again.  
 
@@ -141,7 +141,7 @@
           </div>
         </div>
       </div></br>        
-      <div id="section3" class="bg-warning">         
+      <div id="section3" class="bg-info">         
         <h2>Events</h2>
         <p>Try to scroll this section and look at the navigation list while scrolling!</p>
       <div class="row d-flex" >
