--- a/gallery.html
+++ b/gallery.html
@@ -24,10 +24,90 @@
     <script src="https://kit.fontawesome.com/427f9fdfc8.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Living The Mission</h1>
-    <h2>The Conversation</h2>
-    <h4>The Conversation is a safe space where we witness the power of dialogue heal, reveal, provoke, engage and establish community.  It is indeed the foundation of our organization.
-    </h4>
+    <div class="container-fluid">
+        <h1 class= "text-center">Living The Mission</h1>
+        <div class= "bg-warning">
+        <h2>The Conversation</h2>
+        <h4>The Conversation is a safe space where we witness the power of dialogue heal, reveal, provoke, engage and establish community.  It is indeed the foundation of our organization.
+        </h4>
+        <div class="row d-flex">
+            <div class="col-md-auto mb-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/SATURDAY AT 6pm.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-auto mb-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/Saturday at 6pm(1).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-auto mb-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/What  is covid-19 teaching me_.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-auto mb-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/Virtual.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class= "bg-info">
+    <h2>Community Service</h2>
+        <h4>YSCC is committed to creating community by assisting our local and regional neighbors with basic human needs.  The journey to wholeness begins on the most basic levels of our humanity.
+
+        </h4>
+        <div class="row d-flex">
+            <div class="col-md-auto mb-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/IMG_5184.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-auto mb-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/Lets.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-auto mb-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/IMG_7563.JPG" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-auto mb-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/Screen Shot 2020-07-23 at 8.04.32 PM.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
 
 </body>
 </html> -->
