--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/IMG_3102.PNG" class= "carousel-img d-block w-100">
+        <img src="./assets/jan2021convo.jpeg" class= "carousel-img d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./assets/IMG_5184.png" class="carousel-img d-block w-100">
+        <img src="./assets/File_000(1).jpeg" class="carousel-img d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./assets/IMG_3325.png" class="carousel-img d-block w-100">
+        <img src="./assets/IMG_3928.jpeg" class="carousel-img d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./assets/IMG_6085.png" class="carousel-img d-block w-100">
+        <img src="./assets/Retreat1.png" class="carousel-img d-block w-100">
       </div>
     </div>
     
     <!-- Left and right controls -->
-    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <a class="carousel-control-prev bg-info" href="#demo" data-slide="prev">
       <span class="carousel-control-prev-icon"></span>
     </a>
-    <a class="carousel-control-next" href="#demo" data-slide="next">
+    <a class="carousel-control-next bg-info" href="#demo" data-slide="next">
       <span class="carousel-control-next-icon"></span>
     </a>
     </div>
@@ -81,10 +81,10 @@
     <nav class="col-sm-3 col-4" id="myScrollspy" id="verticalBar">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="#section1">About</a>
+          <a class="nav-link active" href="#section1">Who We Are</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section2">Programming/Services</a>
+          <a class="nav-link" href="#section2">What We Do</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#section3">Events</a>
@@ -166,18 +166,19 @@
       </div></br>        
       <div id="section3" class="bg-info">         
         <h2>Events</h2>
-        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+        <p>Join us, virtually of course, at one of our upcoming events!</p>
       <div class="row d-flex" >
         <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
-            <img class="card-img-top" src="./assets/YSCC+logo.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/jan2021convo.jpeg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Coming Soon</h5>
-              <p class="card-text">Event details coming soon!</p>
-              <a href="" class="btn btn-info">Get Tickets</a>
+              <!-- <h5 class="card-title">January Conversation</h5> -->
+              <p class="card-text">Self-worth affects every decision you make. Get the tools on your worthiness journey as you get everything you desire in this life!</p>
+              <a href="https://www.eventbrite.com/e/the-journey-to-worthiness-tickets-136701226047" class="btn btn-info">Get Tickets</a>
             </div>
           </div>
         </div>
+        
       </div>
       </div></br>
       <div id="section41" class="bg-warning">         
