added gallery page; updated events tab

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
             <!-- MailChimp integration -->
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/5d7ad8451ea58d5db44b6565e/06199d1ea6f2bf5d49974f103.js");</script>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -169,7 +170,7 @@
                 <p class="lvmheadings"> YSCC Retreat </p>
                 
                 <p>YSCC retreat is dedicated to the care of one’s self and soul.  It is an opportunity to practice what we teach as well as develop new and innovative opportunities to meet the needs of our community. </p>
-                <!-- <p> For more info and a visual presentation of YSCC "Living the Mission," <a href="gallery.html">click here.</a></p> -->
+                <p> For more info and a visual presentation of YSCC "Living the Mission," <a href="gallery.html">click here.</a></p>
                 </div>
             </div>
           </div>
@@ -186,6 +187,16 @@
               <!-- <h5 class="card-title">January Conversation</h5> -->
               <p class="card-text">Self-worth affects every decision you make. Get the tools on your worthiness journey as you get everything you desire in this life!</p>
               <a href="https://www.eventbrite.com/e/the-journey-to-worthiness-tickets-136701226047" class="btn btn-info">Get Tickets</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-auto mb-5">
+          <div class="card" style="width: 13rem;">
+            <img class="card-img-top" src="./assets/NadiaEvent.jpeg" alt="Card image cap">
+            <div class="card-body">
+              <!-- <h5 class="card-title">January Conversation</h5> -->
+              <p class="card-text">An enriching talk with author Nadia Rochelle as she delves deep into the self-love chapter of her book, The Chronicles of Nadia. </p>
+              <a href="https://www.eventbrite.com/e/the-journey-to-worthiness-tickets-136701226047" class="btn btn-info">Coming Soon!</a>
             </div>
           </div>
         </div>
