--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       
     <div>
       <a class="navbar-brand py-0" href="#">
-        <img src="https://i.imgur.com/9j5tV7At.jpg" alt="" img-fluid>
+        <img src="./assets/YSCC Inc LOGO.png" style="width:8rem; height:8rem " img-fluid>
       </a>
     </div>
   
