max width for larger screens

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
 
 </head>
-<body data-spy="scroll" data-target="navbar" data-offset="50">
+<body class= "container" data-spy="scroll" data-target="navbar" data-offset="50">
   <div class=container-fluid>
   <nav class="navbar navbar-expand-sm bg-secondary navbar-secondary fixed-top py-0">
       
