additional styling to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -24,9 +24,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/427f9fdfc8.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-warning">
+<body class="container bg-warning">
+    <a href="index.html">Back to Main Page</a>
     <div class="container-fluid">
         <h1 class= "text-center display-3">Living The Mission</h1>
+        
         <div>
         <h2>The Conversation</h2>
         <h4>The Conversation is a safe space where we witness the power of dialogue heal, reveal, provoke, engage and establish community.  It is indeed the foundation of our organization.
@@ -191,6 +193,6 @@
     
     </div>
 </div>
-
+<a href="index.html">Back to Main Page</a>
 </body>
 </html>
