--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <nav class="navbar navbar-expand-sm bg-secondary navbar-secondary fixed-top py-0">
       
     <div>
-      <a class="navbar-brand py-0" href="#">
+      <a class="navbar-brand py-0" href="index.html">
         <img src="./assets/YSCC Inc LOGO.png" style="width:10rem; height:10rem " img-fluid>
       </a>
     </div>
