--- a/gallery.html
+++ b/gallery.html
@@ -36,6 +36,14 @@
         <div class="row d-flex">
             <div class="col-md-auto mb-5">
                 <div class="card" style="width: 14rem;">
+                    <img src="./assets/jan2021convo.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">"Author, educator, Courtney Cook shared her Worthiness Curriculm with YSCC"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-auto mb-5">
+                <div class="card" style="width: 14rem;">
                     <img src="./assets/SATURDAY AT 6pm.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">"A time for us to share words and wisdom that guide our daily naviagtion of this life."</p>
@@ -66,6 +74,7 @@
                     </div>
                 </div>
             </div>
+            
         </div>
     </div>
     
