--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/jan2021convo.jpeg" class= "carousel-img d-block w-100">
+        <img src="./assets/NadiaEvent.jpeg" class= "carousel-img d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./assets/File_000(1).jpeg" class="carousel-img d-block w-100">
+        <img src="./assets/HolidayPartySS.JPG" class="carousel-img d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./assets/IMG_3928.jpeg" class="carousel-img d-block w-100">
+        <img src="./assets/IMG_7563.JPG" class="carousel-img d-block w-100">
       </div>
       <div class="carousel-item">
         <img src="./assets/Retreat1.png" class="carousel-img d-block w-100">
@@ -180,17 +180,16 @@
       <div id="section3" class="bg-info">         
         <h2>Events</h2>
         <p>Join us, virtually of course, at one of our upcoming events!</p>
-      <div class="row d-flex" >
-        <div class="col-md-auto mb-5">
+      <div class="row d-flex justify-content-center" >
+        <!-- <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
             <img class="card-img-top" src="./assets/jan2021convo.jpeg" alt="Card image cap">
             <div class="card-body">
-              <!-- <h5 class="card-title">January Conversation</h5> -->
               <p class="card-text">Self-worth affects every decision you make. Get the tools on your worthiness journey as you get everything you desire in this life!</p>
               <a href="https://www.eventbrite.com/e/the-journey-to-worthiness-tickets-136701226047" class="btn btn-info">Get Tickets</a>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
             <img class="card-img-top" src="./assets/NadiaEvent.jpeg" alt="Card image cap">
