updated for current programming

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <img class="card-img-top" src="./assets/NadiaEvent.jpeg" alt="Card image cap">
             <div class="card-body">
               <!-- <h5 class="card-title">January Conversation</h5> -->
-              <p class="card-text">An enriching talk with author Nadia Rochelle as she delves deep into the self-love chapter of her book, The Chronicles of Nadia. </p>
+              <p class="card-text">An enriching talk with author Nadia Rochelle as she delves deep into the self-love chapter of her book, <a href="https://www.amazon.com/Chronicles-Nadia-Rochelle/dp/0578585022/ref=sr_1_1?dchild=1&keywords=chronicles+of+nadia&qid=1611694747&sr=8-1">The Chronicles of Nadia.</a> </p>
               <a href="https://www.eventbrite.com/e/the-journey-to-worthiness-tickets-136701226047" class="btn btn-info">Coming Soon!</a>
             </div>
           </div>
