updated marketing for Feb programming

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/NadiaEvent.jpeg" class= "carousel-img d-block w-100">
+        <img src="./assets/NadiaEvent2.jpeg" class= "carousel-img d-block w-100">
       </div>
       <div class="carousel-item">
         <img src="./assets/HolidayPartySS.JPG" class="carousel-img d-block w-100">
@@ -192,11 +192,11 @@
         </div> -->
         <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
-            <img class="card-img-top" src="./assets/NadiaEvent.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/NadiaEvent2.jpeg" alt="Card image cap">
             <div class="card-body">
               <!-- <h5 class="card-title">January Conversation</h5> -->
               <p class="card-text">An enriching talk with author Nadia Rochelle as she delves deep into the self-love chapter of her book, <a href="https://www.amazon.com/Chronicles-Nadia-Rochelle/dp/0578585022/ref=sr_1_1?dchild=1&keywords=chronicles+of+nadia&qid=1611694747&sr=8-1">The Chronicles of Nadia.</a> </p>
-              <a href="https://www.eventbrite.com/e/the-journey-to-worthiness-tickets-136701226047" class="btn btn-info">Coming Soon!</a>
+              <a href="https://www.eventbrite.com/e/the-responsibility-of-self-love-the-conversation-tickets-140307508535" class="btn btn-info">Get Tickets</a>
             </div>
           </div>
         </div>
