--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/NadiaEvent2.jpeg" class= "carousel-img d-block w-100">
+        <img src="./assets/CSQ1.PNG" class= "carousel-img d-block w-100">
       </div>
       <div class="carousel-item">
         <img src="./assets/HolidayPartySS.JPG" class="carousel-img d-block w-100">
@@ -181,22 +181,22 @@
         <h2>Events</h2>
         <p>Join us, virtually of course, at one of our upcoming events!</p>
       <div class="row d-flex justify-content-center" >
-        <!-- <div class="col-md-auto mb-5">
+        <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
-            <img class="card-img-top" src="./assets/jan2021convo.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/CSQ1.PNG" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Self-worth affects every decision you make. Get the tools on your worthiness journey as you get everything you desire in this life!</p>
-              <a href="https://www.eventbrite.com/e/the-journey-to-worthiness-tickets-136701226047" class="btn btn-info">Get Tickets</a>
+              <p class="card-text">Now collecting duffle bags for youth in transition.Donate using one of the methods in the flyer or click below to contact us for drop off locations</p>
+              <a href="mailto: yoursoulcarecommunity@gmail.com" class="btn btn-info">Contact YSCC</a>
             </div>
           </div>
-        </div> -->
+        </div>
         <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
             <img class="card-img-top" src="./assets/NadiaEvent2.jpeg" alt="Card image cap">
             <div class="card-body">
               <!-- <h5 class="card-title">January Conversation</h5> -->
               <p class="card-text">An enriching talk with author Nadia Rochelle as she delves deep into the self-love chapter of her book, <a href="https://www.amazon.com/Chronicles-Nadia-Rochelle/dp/0578585022/ref=sr_1_1?dchild=1&keywords=chronicles+of+nadia&qid=1611694747&sr=8-1">The Chronicles of Nadia.</a> </p>
-              <a href="https://www.eventbrite.com/e/the-responsibility-of-self-love-the-conversation-tickets-140307508535" class="btn btn-info">Get Tickets</a>
+              <a href="https://youtu.be/caQyJhOVG3Y" class="btn btn-info">Access Playback</a>
             </div>
           </div>
         </div>
