embedded donate button on even section

--- a/index.html
+++ b/index.html
@@ -185,7 +185,12 @@
           <div class="card" style="width: 13rem;">
             <img class="card-img-top" src="./assets/CSQ1.PNG" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Now collecting duffle bags for youth in transition.Donate using one of the methods in the flyer or click below to contact us for drop off locations</p>
+              <p class="card-text">Now collecting duffle bags for youth in transition.Donate  or click below to contact us for drop off locations</p>
+              <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <input type="hidden" name="hosted_button_id" value="TW6JNJT8QFGFE" />
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                </form>
               <a href="mailto: yoursoulcarecommunity@gmail.com" class="btn btn-info">Contact YSCC</a>
             </div>
           </div>
