fixed overlapping navbar

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 </head>
 <body class= "container" data-spy="scroll" data-target="navbar" data-offset="50">
-  <div class=container-fluid>
-  <nav class="navbar navbar-expand-sm bg-secondary navbar-secondary fixed-top py-0">
+  <div style="height: 5rem;">
+  <nav class="navbar navbar-expand-sm bg-secondary navbar-secondary fixed-top py-0" >
       
     <div>
-      <a class="navbar-brand py-0" href="index.html">
+      <a class="navbar-brand py-0"  href="index.html">
         <img src="./assets/YSCC Inc LOGO.png" style="width:10rem; height:10rem " img-fluid>
       </a>
     </div>
@@ -63,7 +63,7 @@
           <a class="nav-link py-0" href="#section42">Donate</a> 
       </li>
     </ul>
-  </nav></br>
+  </nav>
 </div>
  
   <div id="demo" class="carousel slide" data-ride="carousel" class= "container">
