--- a/index.html
+++ b/index.html
@@ -197,6 +197,16 @@
         </div>
         <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
+            <img class="card-img-top" src="./assets/Nadia328.jpeg" alt="Card image cap">
+            <div class="card-body">
+              <!-- <h5 class="card-title">January Conversation</h5> -->
+              <p class="card-text">Nadia Rochelle continues her talk with YSCC about the responsibility of self-love from her book,<a href="https://www.amazon.com/Chronicles-Nadia-Rochelle/dp/0578585022/ref=sr_1_1?dchild=1&keywords=chronicles+of+nadia&qid=1611694747&sr=8-1">The Chronicles of Nadia</a>.</p>
+              <a href="https://www.eventbrite.com/e/146608575195" class="btn btn-info">Get Tickets</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-auto mb-5">
+          <div class="card" style="width: 13rem;">
             <img class="card-img-top" src="./assets/NadiaEvent2.jpeg" alt="Card image cap">
             <div class="card-body">
               <!-- <h5 class="card-title">January Conversation</h5> -->
