--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/CSQ1.PNG" class= "carousel-img d-block w-100">
+        <img src="./assets/MellConvo.JPG" class= "carousel-img d-block w-100">
       </div>
       <div class="carousel-item">
         <img src="./assets/HolidayPartySS.JPG" class="carousel-img d-block w-100">
@@ -118,7 +118,7 @@
 
           Our sincere intentions eventually because YSCC, a 501c3 non-profit organization in 2018 that continues to create spaces that allow people to experience healing, wholeness, equity, purpose and inclusion.  What we do may seem untraditional and unorthodox to some, yet we continue to witness community happen with strangers who realize they are more alike than different, people are heard and seen, unconscious biases are confronted, and ultimately purpose is aligned.  That’s not just what we do, but it is who we are.
           
-          Because YSCC is at the intersection of spirituality and diversity, we have developed programming and curriculum that helps bridge the gap of community within organizations and corporations.  We facilitate small and large group sessions that encourage healing, acceptance, equity and inclusion among other topics.  We continue to celebrate milestones individually and collectively as we remain true </p>
+          Because YSCC is at the intersection of spirituality and diversity, we have developed programming and curriculum that helps bridge the gap of community within organizations and corporations.  We facilitate small and large group sessions that encourage healing, acceptance, equity and inclusion among other topics.  We continue to celebrate milestones individually and collectively as we remain true to our original intentions of community care, authenticity, wholeness and acceptance! </p>
       </div>
       <div id="section2" class="bg-warning"> 
         <h2>What We Do</h2>
@@ -180,7 +180,7 @@
       <div id="section3" class="bg-info">         
         <h2>Events</h2>
         <p>Join us, virtually of course, at one of our upcoming events!</p>
-      <div class="row d-flex justify-content-center" >
+      <!-- <div class="row d-flex justify-content-center" >
         <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
             <img class="card-img-top" src="./assets/CSQ1.PNG" alt="Card image cap">
@@ -194,14 +194,14 @@
               <a href="mailto: yoursoulcarecommunity@gmail.com" class="btn btn-info">Contact YSCC</a>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
-            <img class="card-img-top" src="./assets/Nadia328.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/MellConvo.JPG" alt="Card image cap">
             <div class="card-body">
               <!-- <h5 class="card-title">January Conversation</h5> -->
-              <p class="card-text">Nadia Rochelle continues her talk with YSCC about the responsibility of self-love from her book,<a href="https://www.amazon.com/Chronicles-Nadia-Rochelle/dp/0578585022/ref=sr_1_1?dchild=1&keywords=chronicles+of+nadia&qid=1611694747&sr=8-1">The Chronicles of Nadia</a>.</p>
-              <a href="https://www.eventbrite.com/e/146608575195" class="btn btn-info">Get Tickets</a>
+              <p class="card-text">Mell Lessington shares how his decision to transition careers from banking to software engineering led him on a path to self-discovery.</p>
+              <a href="https://talkwithmell.eventbrite.com" class="btn btn-info">Get Tickets</a>
             </div>
           </div>
         </div>
