--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
       <div id="section3" class="bg-info">         
         <h2>Events</h2>
         <p>Join us, virtually of course, at one of our upcoming events!</p>
-      <!-- <div class="row d-flex justify-content-center" >
-        <div class="col-md-auto mb-5">
+      <div class="row d-flex justify-content-center" >
+        <!-- <div class="col-md-auto mb-5">
           <div class="card" style="width: 13rem;">
             <img class="card-img-top" src="./assets/CSQ1.PNG" alt="Card image cap">
             <div class="card-body">
