--- a/Updates/index.html
+++ b/Updates/index.html
@@ -9,6 +9,8 @@
         <link rel="icon" type="image/x-icon" href="/assets/YSCC+logo.jpg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+            <!-- MailChimp integration -->
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/5d7ad8451ea58d5db44b6565e/06199d1ea6f2bf5d49974f103.js");</script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -42,8 +44,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">"The intersection where spirituality and diversity collide"</div>
+                
                 <div class="masthead-heading text-uppercase text-warning">Your Soul Care Community</div>
+                <div class="masthead-subheading">"The intersection where spirituality and diversity collide"</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Learn More</a>
             </div>
         </header>
@@ -281,7 +284,7 @@
             <div class="container">
                 <div class="text-center">
                     <h3 class="section-heading text-uppercase">Connect with us</h3>
-                    <div class="col-lg-4 my-3 my-lg-0">
+                    <div class="col-lg-4 my-3 my-lg-0 container-fluid">
                         
                         <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/yoursoulcarecommunity"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/yoursoulcarecommunity/"><i class="fab fa-instagram-square"></i></a>
