added convo link

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                     <h3 class="text-uppercase">The Conversation</h3>
                                     <p class="item-intro text-muted">"Choosing The Better Path"</p>
                                     <img class="img-fluid d-block mx-auto" src="/assets/MellConvo.JPG" alt="" />
-                                    <p>Mell Lessington, a leader in Your Soul Care Community, opens up about how a decision to change careers from banking to software engineering unintentionally led him on a path that he would have never imagined a career choice would. We invite you to join us as we extract the precious jewels and and nibble on the life-lessons that will be extracted from this time of open, honest, and vulnerable conversation. Access the playback <a href="#">here.</a> </p>
+                                    <p>Mell Lessington, a leader in Your Soul Care Community, opens up about how a decision to change careers from banking to software engineering unintentionally led him on a path that he would have never imagined a career choice would. We invite you to join us as we extract the precious jewels and and nibble on the life-lessons that will be extracted from this time of open, honest, and vulnerable conversation. Access the playback <a href="https://youtu.be/laHpPANbgJY">here.</a> </p>
                                     
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
