added email icon link

--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
                         
                         <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/yoursoulcarecommunity"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/yoursoulcarecommunity/"><i class="fab fa-instagram-square"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="mailto:yoursoulcarecommunity@gmail.com"><i class="far fa-envelope"></i></a>
                     </div>
                     <h3 class="section-heading text-uppercase">Give to YSCC</h3>
                     <div id="donate">
