added themellcode branding

--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">Copyright © Your Soul Care Community, Inc 2021</div>
+                    <div class="col-lg-4 text-lg-left">Copyright © Your Soul Care Community, Inc 2021
+                        <p class="text-muted small mb-0">Created by <a href="http://themellcode.com">THEMELLCODE</a></p>
+                    </div>
                     
                     </div>
                 </div>
