--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">Copyright © Your Soul Care Community, Inc 2021
+                <div class="container">
+                    <div class="text-lg-center">Copyright © Your Soul Care Community, Inc 2021
                         <p class="text-muted small mb-0">Created by <a href="http://themellcode.com">THEMELLCODE</a></p>
                     </div>
                     
