--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div class="container">
                 <div class="container">
                     <div class="text-lg-center">Copyright © Your Soul Care Community, Inc 2021
-                        <p class="text-muted small mb-0">Created by <a href="http://themellcode.com">THEMELLCODE</a></p>
+                        <p class="text-muted small mb-0">Created by <a class="text-info" href="http://themellcode.com">THEMELLCODE</a></p>
                     </div>
                     
                     </div>
