--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="/assets/communitysvc.jpg" alt="" />
+                                <img class="img-fluid" src="/assets/YSCCserice621.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Community Service</div>
@@ -316,7 +316,7 @@
             </div>
         </footer>
         <!-- Portfolio Modals-->
-        <!-- Modal 1-->
+        <!-- Conversation-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -342,7 +342,7 @@
                 </div>
             </div>
         </div>
-        <!-- Modal 2-->
+        <!-- Community Service-->
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -354,8 +354,10 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">Community Service</h3>
                                     <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
-                                    <img class="img-fluid d-block mx-auto" src="/assets/communitysvc.jpg" alt="" />
-                                    <p>To fate Your Soul Care Community has done grocery giveaways, duffle bag drive to help youth experiencing homelessness or foster care, given hand-written cards to seniors, and we currently have an adopt-a-senior program as COVID-19 persists. Stay tuned for upcoming community service projects!</p>
+                                    <img class="img-fluid d-block mx-auto" src="/assets/YSCCserice621.jpg" alt="" />
+                                    <p>The journey to wholeness begins on the most basic levels of our humanity.  YSCC is committed to serving our communities and this month we are supporting metro Atlanta adults experiencing homelessness.  We are collecting sanitary items to assist in their transition.  To arrange a drop off click <a href="mailto:yoursoulcarecommunity@gmail.com">here</a>. You can also make a <a href="https://www.paypal.com/donate?hosted_button_id=W46W5JCG9BY2Y">donation</a> toward the purchase of supplies. 
+
+                                    </p>
                                     
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
